# core library

if(WIN32)
	# header files
	FILE(GLOB_RECURSE HEARDER_LIST . "*.h")
else()
	PROJECT(core)

	ADD_DEFINITIONS("-g --std=c++0x  -O3 -msse2 -mmmx -mfpmath=sse")
	ADD_DEFINITIONS("-DTBB_PREVIEW_CONCURRENT_PRIORITY_QUEUE")
	ADD_DEFINITIONS("-D_TCMALLOC_USED")
endif()

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(./inc)
INCLUDE_DIRECTORIES("../libutil")
INCLUDE_DIRECTORIES(${DEPS_PTHREAD})
INCLUDE_DIRECTORIES(${DEPS_TBB})
INCLUDE_DIRECTORIES(${DEPS_EXPAT})
INCLUDE_DIRECTORIES(${DEPS_MYSQL})
INCLUDE_DIRECTORIES(${DEPS_LOG4CPLUS})
INCLUDE_DIRECTORIES(${DEPS_ZEROMQ})
INCLUDE_DIRECTORIES(${DEPS_LUA51})

# source files
AUX_SOURCE_DIRECTORY(./inc INC_LIST)
AUX_SOURCE_DIRECTORY(./src SRC_LIST)
AUX_SOURCE_DIRECTORY(./cache CACHE_LIST)

if(WIN32)
	# vs directories
	SOURCE_GROUP("cache" REGULAR_EXPRESSION cache)
endif()

ADD_LIBRARY(core STATIC
	${HEARDER_LIST}
	${INC_LIST}
    ${SRC_LIST}
    ${CACHE_LIST}
	)

if(WIN32)
	# vs propertites
	SET_TARGET_PROPERTIES(core
		PROPERTIES
		COMPILE_FLAGS "/wd4996"
		FOLDER "libs"
	)
else()
	# makefile propertites
endif()

