# defs library

if (WIN32)
	# header files
	FILE(GLOB_RECURSE HEARDER_LIST . "*.h")
else()
	PROJECT(defs)

	ADD_DEFINITIONS("-g --std=c++0x  -O3 -msse2 -mmmx -mfpmath=sse")
	ADD_DEFINITIONS("-DTBB_PREVIEW_CONCURRENT_PRIORITY_QUEUE")
endif()

INCLUDE_DIRECTORIES(${DEPS_PTHREAD})
INCLUDE_DIRECTORIES(${DEPS_TBB})
INCLUDE_DIRECTORIES(${DEPS_EXPAT})
INCLUDE_DIRECTORIES(${DEPS_MYSQL})
INCLUDE_DIRECTORIES(${DEPS_LOG4CPLUS})
INCLUDE_DIRECTORIES(${DEPS_ZEROMQ})
INCLUDE_DIRECTORIES(${DEPS_LUA51})
INCLUDE_DIRECTORIES(${DEPS_LIBICONV})
INCLUDE_DIRECTORIES(${DEPS_UNITTEST})
INCLUDE_DIRECTORIES(${DEPS_CURL})
INCLUDE_DIRECTORIES(${DEPS_ZLIB})
INCLUDE_DIRECTORIES(${DEPS_OPENSSL})
INCLUDE_DIRECTORIES(${DEPS_PROTOBUF})
INCLUDE_DIRECTORIES(${DEPS_ACE})
INCLUDE_DIRECTORIES("./")
INCLUDE_DIRECTORIES("../libcore/inc")
INCLUDE_DIRECTORIES("../libg3dlite/include")
INCLUDE_DIRECTORIES("../libutil")
INCLUDE_DIRECTORIES("../pwworldsrv/msg")
INCLUDE_DIRECTORIES("../pwaccsrv/msg")
INCLUDE_DIRECTORIES("../../shared/pwmsg")

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./kvorm KVORM_LIST)

SET(IGNORE_SRC
	"./pw_msg_export_pwaccsrv.cpp"
	)
list(REMOVE_ITEM SRC_LIST ${IGNORE_SRC})

if(WIN32)
	# vs directories
	SOURCE_GROUP("kvorm" REGULAR_EXPRESSION kvorm)
	SOURCE_GROUP("kvorm_gmland" REGULAR_EXPRESSION gmland)
endif()

	ADD_LIBRARY(defs 
		${HEARDER_LIST}
		${SRC_LIST}
		${KVORM_LIST}
		)
	
	ADD_DEPENDENCIES(defs core util g3dlite)

if(WIN32)
	# vs propertites
	SET_TARGET_PROPERTIES(defs
		PROPERTIES
		COMPILE_FLAGS "/wd4996"
		FOLDER "libs"
	)
else()
	# makefile propertites
endif()




