# libutil library

if(WIN32)
	# header files
	FILE(GLOB_RECURSE HEARDER_LIST . "*.h")
else()
	PROJECT(util)

	ADD_DEFINITIONS("-g --std=c++0x  -O3 -msse2 -mmmx -mfpmath=sse")
	#ADD_DEFINITIONS("-g --std=c++0x")
	ADD_DEFINITIONS("-DTBB_PREVIEW_CONCURRENT_PRIORITY_QUEUE")
endif()

INCLUDE_DIRECTORIES(${DEPS_PTHREAD})
INCLUDE_DIRECTORIES(${DEPS_TBB})
INCLUDE_DIRECTORIES(${DEPS_EXPAT})
INCLUDE_DIRECTORIES(${DEPS_MYSQL})
INCLUDE_DIRECTORIES(${DEPS_LOG4CPLUS})
INCLUDE_DIRECTORIES(${DEPS_ZEROMQ})
INCLUDE_DIRECTORIES(${DEPS_LUA51})
INCLUDE_DIRECTORIES(${DEPS_LIBICONV})
INCLUDE_DIRECTORIES(${DEPS_UNITTEST})
INCLUDE_DIRECTORIES(${DEPS_CURL})
INCLUDE_DIRECTORIES(${DEPS_ZLIB})
INCLUDE_DIRECTORIES(${DEPS_OPENSSL})
INCLUDE_DIRECTORIES("./")

AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(./json JSON_LIST)
AUX_SOURCE_DIRECTORY(./algorithm ALGORITHM_LIST)
AUX_SOURCE_DIRECTORY(./bson BSON_LIST)
AUX_SOURCE_DIRECTORY(./bson/util BSON_UTIL_LIST)
AUX_SOURCE_DIRECTORY(./bson/mutable BSON_MUTABLE_LIST)
AUX_SOURCE_DIRECTORY(./mongo MONGO_LIST)
AUX_SOURCE_DIRECTORY(./kvdb KDVB_LIST)
AUX_SOURCE_DIRECTORY(./gdb GDB_LIST)
AUX_SOURCE_DIRECTORY(./snappy SNAPPY_LIST)
AUX_SOURCE_DIRECTORY(./cityhash CITYHASH_LIST)
AUX_SOURCE_DIRECTORY(./tx_platform TXPLATFORM_LIST)

if(WIN32)
	# vs directories
	SOURCE_GROUP("algorithm" REGULAR_EXPRESSION algorithm)
	SOURCE_GROUP("bson" REGULAR_EXPRESSION bson)
	SOURCE_GROUP("bson\\util" REGULAR_EXPRESSION bson/util)
	SOURCE_GROUP("bson\\mutable" REGULAR_EXPRESSION bson/mutable)
	SOURCE_GROUP("cityhash" REGULAR_EXPRESSION cityhash)
	SOURCE_GROUP("gdb" REGULAR_EXPRESSION gdb)
	SOURCE_GROUP("json" REGULAR_EXPRESSION json)
	SOURCE_GROUP("kvdb" REGULAR_EXPRESSION kvdb)
	SOURCE_GROUP("mongo" REGULAR_EXPRESSION mongo)
	SOURCE_GROUP("snappy" REGULAR_EXPRESSION snappy)
	SOURCE_GROUP("socket" REGULAR_EXPRESSION socket)
	SOURCE_GROUP("tx_platform" REGULAR_EXPRESSION tx_platform)
endif()

ADD_LIBRARY(util 
	${HEARDER_LIST}
	${SRC_LIST} 
    ${JSON_LIST}
    ${ALGORITHM_LIST}
    ${BSON_LIST}
	${BSON_UTIL_LIST}
	${BSON_MUTABLE_LIST}
    ${MONGO_LIST}
    ${KDVB_LIST}
    ${CITYHASH_LIST}
    ${SNAPPY_LIST}
	${GDB_LIST}
	${CITYHASH_LIST}
    ${TXPLATFORM_LIST})


if(WIN32)
	# vs propertites
	SET_TARGET_PROPERTIES(util
		PROPERTIES
		COMPILE_FLAGS "/wd4996"
		FOLDER "libs"
	)
else()
	# makefile propertites
	TARGET_LINK_LIBRARIES(util curl)
endif()